--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "npm run eslint --fix",
+      "npm run prettier"
+    ]
+  },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
